--- a/css/style.scss
+++ b/css/style.scss
@@ -1,184 +1,169 @@
 body {
-    background-color: black;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-weight: 500;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+  background-color: black;
+  font-family: "Courier New", monospace;
+  font-weight: 500;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.title {
+  color: limegreen;
+  text-transform: uppercase;
+  margin-top: 3em;
+  margin-bottom: 3em;
+  font-size: 1em;
+  letter-spacing: 0.3em;
+}
+
+.keyboard {
+  display: flex;
+  flex-direction: column;
+}
+
+.row {
+  list-style: none;
+  display: flex;
+}
+
+li {
+  height: 3em;
+  width: 3em;
+  color: #000;
+  background-color: #1e1e1e;
+  border: 1px solid #333;
+  border-radius: 0.4em;
+  line-height: 3em;
+  letter-spacing: 1px;
+  margin: 0.4em;
+  transition: 0.3s;
+  text-align: center;
+  font-size: 1em;
+  box-shadow: 0 0 5px #000;
+}
+
+#tab {
+  width: 5em;
+}
+
+#caps {
+  width: 6em;
+}
+
+#left-shift {
+  width: 8em;
+}
+
+#enter {
+  width: 6em;
+}
+
+#right-shift {
+  width: 8em;
+}
+
+#back {
+  width: 5em;
+}
+
+.pinky {
+  background-color: #ff5555;
+  border: 1px solid #ff5555;
+  color: #000;
+}
+
+.pinky.selected {
+  color: #ff5555;
+  background-color: black;
+}
+
+.ring {
+  background-color: #f1fa8c;
+  border: 1px solid #f1fa8c;
+  color: #000;
+}
+
+.ring.selected {
+  color: #f1fa8c;
+  background-color: black;
+}
+
+.middle {
+  background-color: #50fa7b;
+  border: 1px solid #50fa7b;
+  color: #000;
+}
+
+.middle.selected {
+  color: #50fa7b;
+  background-color: black;
+}
+
+.pointer1st {
+  background-color: #8be9fd;
+  border: 1px solid #8be9fd;
+  color: #000;
+}
+
+.pointer1st.selected {
+  color: #8be9fd;
+  background-color: black;
+}
+
+.pointer2nd {
+  background-color: #bd93f9;
+  border: 1px solid #bd93f9;
+  color: #000;
+}
+
+.pointer2nd.selected {
+  color: #bd93f9;
+  background-color: black;
+}
+
+.fill-out-key {
+  background-color: #44475a;
+  border: 1px solid #44475a;
+  color: #f8f8f2;
+}
+
+.selected {
+  background-color: transparent;
+  animation: vibrate-1 0.3s linear infinite both;
+}
+
+.hit {
+  animation: hit 0.3s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+}
+
+@keyframes hit {
+  0% {
+    transform: scale(1.2);
   }
-  
-  .title {
-    color: mintcream;
-    text-transform: uppercase;
-    margin-top: 3em;
-    margin-bottom: 3em;
-    font-size: 1em;
-    letter-spacing: 0.3em;
+  100% {
+    transform: scale(1);
   }
-  
-  .keyboard {
-    display: flex;
-    flex-direction: column;
+}
+
+@keyframes vibrate-1 {
+  0% {
+    transform: translate(0);
   }
-  
-  .row {
-    list-style: none;
-    display: flex;
+  20% {
+    transform: translate(-2px, 2px);
   }
-  
-  li {
-    height: 3em;
-    width: 3em;
-    color: rgba(0, 0, 0, 0.7);
-    border-radius: 0.4em;
-    line-height: 3em;
-    letter-spacing: 1px;
-    margin: 0.4em;
-    transition: 0.3s;
-    text-align: center;
-    font-size: 1em;
+  40% {
+    transform: translate(-2px, -2px);
   }
-  
-  #tab {
-    width: 5em;
+  60% {
+    transform: translate(2px, 2px);
   }
-  
-  #caps {
-    width: 6em;
+  80% {
+    transform: translate(2px, -2px);
   }
-  
-  #left-shift {
-    width: 8em;
+  100% {
+    transform: translate(0);
   }
-  
-  #enter {
-    width: 6em;
-  }
-  
-  #right-shift {
-    width: 8em;
-  }
-  
-  #back {
-    width: 5em;
-  }
-  
-  .pinky {
-    background-color: crimson;
-    border: 2px solid crimson;
-  }
-  
-  .pinky.selected {
-    color: crimson;
-  }
-  
-  .ring {
-    background-color: coral;
-    border: 2px solid coral;
-  }
-  
-  .ring.selected {
-    color: coral;
-  }
-  
-  .middle {
-    background-color: darkorange;
-    border: 2px solid darkorange;
-  }
-  
-  .middle.selected {
-    color: darkorange;
-  }
-  
-  .pointer1st {
-    background-color: gold;
-    border: 2px solid gold;
-  }
-  
-  .pointer1st.selected {
-    color: gold;
-  }
-  
-  .pointer2nd {
-    background-color: khaki;
-    border: 2px solid khaki;
-  }
-  
-  .pointer2nd.selected {
-    color: khaki;
-  }
-  
-  .fill-out-key {
-    background-color: slategrey;
-    border: 2px solid slategrey;
-  }
-  
-  .selected {
-    background-color: transparent;
-    -webkit-animation: vibrate-1 0.3s linear infinite both;
-    animation: vibrate-1 0.3s linear infinite both;
-  }
-  
-  .hit {
-    -webkit-animation: hit 0.3s cubic-bezier(0.39, 0.575, 0.565, 1) both;
-    animation: hit 0.3s cubic-bezier(0.39, 0.575, 0.565, 1) both;
-  }
-  
-  @-webkit-keyframes hit {
-    0%{
-      transform: scale(1.2);
-    }
-    100%{
-      transform: scale(1);
-    }
-  }
-  @keyframes hit {
-    0%{
-      transform: scale(1.2);
-    }
-    100% {
-      transform: scale(1);
-    }
-  }
-  @-webkit-keyframes vibrate-1 {
-    0%{
-      transform: translate(0);
-    }
-    20%  {
-      transform: translate(-2px, 2px);
-    }
-    40%  {
-      transform: translate(-2px, -2px);
-    }
-    60%  {
-      transform: translate(2px, 2px);
-    }
-    80%  {
-      transform: translate(2px, -2px);
-    }
-    100%{
-      transform: translate(0);
-    }
-  }
-  @keyframes vibrate-1 {
-    0% {
-      transform: translate(0);
-    }
-    20% {
-      transform: translate(-2px, 2px);
-    }
-    40% {
-      transform: translate(-2px, -2px);
-    }
-    60% {
-      transform: translate(2px, 2px);
-    }
-    80% {
-      transform: translate(2px, -2px);
-    }
-    100% {
-      transform: translate(0);
-    }
-  }/*# sourceMappingURL=style.css.map */
+}
