--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
   background-color: black;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Courier New", monospace;
   font-weight: 500;
   display: flex;
   flex-direction: column;
@@ -10,7 +10,7 @@ body {
 }
 
 .title {
-  color: mintcream;
+  color: limegreen;
   text-transform: uppercase;
   margin-top: 3em;
   margin-bottom: 3em;
@@ -31,7 +31,9 @@ body {
 li {
   height: 3em;
   width: 3em;
-  color: rgba(0, 0, 0, 0.7);
+  color: #000;
+  background-color: #1e1e1e;
+  border: 1px solid #333;
   border-radius: 0.4em;
   line-height: 3em;
   letter-spacing: 1px;
@@ -39,6 +41,7 @@ li {
   transition: 0.3s;
   text-align: center;
   font-size: 1em;
+  box-shadow: 0 0 5px #000;
 }
 
 #tab {
@@ -66,53 +69,64 @@ li {
 }
 
 .pinky {
-  background-color: crimson;
-  border: 2px solid crimson;
+  background-color: #ff5555;
+  border: 1px solid #ff5555;
+  color: #000;
 }
 
 .pinky.selected {
-  color: crimson;
+  color: #ff5555;
+  background-color: black;
 }
 
 .ring {
-  background-color: coral;
-  border: 2px solid coral;
+  background-color: #f1fa8c;
+  border: 1px solid #f1fa8c;
+  color: #000;
 }
 
 .ring.selected {
-  color: coral;
+  color: #f1fa8c;
+  background-color: black;
 }
 
 .middle {
-  background-color: darkorange;
-  border: 2px solid darkorange;
+  background-color: #50fa7b;
+  border: 1px solid #50fa7b;
+  color: #000;
 }
 
 .middle.selected {
-  color: darkorange;
+  color: #50fa7b;
+  background-color: black;
 }
 
 .pointer1st {
-  background-color: gold;
-  border: 2px solid gold;
+  background-color: #8be9fd;
+  border: 1px solid #8be9fd;
+  color: #000;
 }
 
 .pointer1st.selected {
-  color: gold;
+  color: #8be9fd;
+  background-color: black;
 }
 
 .pointer2nd {
-  background-color: khaki;
-  border: 2px solid khaki;
+  background-color: #bd93f9;
+  border: 1px solid #bd93f9;
+  color: #000;
 }
 
 .pointer2nd.selected {
-  color: khaki;
+  color: #bd93f9;
+  background-color: black;
 }
 
 .fill-out-key {
-  background-color: slategrey;
-  border: 2px solid slategrey;
+  background-color: #44475a;
+  border: 1px solid #44475a;
+  color: #f8f8f2;
 }
 
 .selected {
@@ -123,6 +137,7 @@ li {
 .hit {
   animation: hit 0.3s cubic-bezier(0.39, 0.575, 0.565, 1) both;
 }
+
 @keyframes hit {
   0% {
     transform: scale(1.2);
@@ -131,6 +146,7 @@ li {
     transform: scale(1);
   }
 }
+
 @keyframes vibrate-1 {
   0% {
     transform: translate(0);
@@ -150,4 +166,4 @@ li {
   100% {
     transform: translate(0);
   }
-} /*# sourceMappingURL=style.css.map */
+}
